# pyuvsim

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  5km_3runs_memscaling_mem_profiler.txt  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  mock_catalog_heratext.npz  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  telescope_config_HERA.yaml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: compare-post-benchmark.yaml  compare_post_benchmark.yaml  externaltests.yaml  publish-to-test-pypi.yaml  testsuite.yaml  windows-tests.yaml
benchmarking/: README.md  analyze_runtimes.py  benchmark.py  benchmark_analytic_config.yaml  jobscript.sh  make_benchmark_configs.py  run_benchmarking.py  settings.yaml
ci/: herasim.yaml  install_conda.sh  linting.yaml  min_deps.yaml  min_versions.yaml  only_progsteps.yaml  publish.yaml  pyuvsim_tests.yaml  pyuvsim_tests_311.yaml  pyuvsim_tests_mpich.yaml  pyuvsim_tests_openmpi.yaml  pyuvsim_tests_refsim.yaml  pyuvsim_tests_windows.yaml  rtd_env.yml  tests.yaml
dev/bench/: data.js
docs/: Makefile  classes.rst  comparison.rst  conf.py  developers.rst  index.rst  make_index.py  parameter_files.rst  requirements.txt  usage.rst
docs/example_configs/: baseline_lite.csv  bl_lite_mixed.yaml  tranquility_config.yaml
pyuvsim/: GIT_INFO  __init__.py  analyticbeam.py  antenna.py  astropy_interface.py  baseline.py  mpi.py  profiling.py  simsetup.py  source.py  spherical_coordinates_basis_transformation.py  telescope.py  utils.py  uvsim.py  version.py
pyuvsim/data/: 28mEWbl_10time_10chan.uvfits  28mEWbl_1time_1chan.uvfits  28m_triangle_10time_10chan.uvfits  5km_triangle_10time_1chan.yaml  5km_triangle_1time_1chan.uvfits  5km_triangle_1time_1chan.yaml  5km_triangle_1time_1chan_6ant.yaml  5km_triangle_2time_1chan.yaml  HERA65_layout.csv  HERA_layout.csv  bl_lite_mixed.yaml  gleam_triangle_flat.uvh5  gleam_triangle_spectral_index.uvh5  gleam_triangle_subband.uvh5  laptop_size_sim.yaml  letter_R_12pt_2458098.27471265.txt  mock_catalog_heratext_2458098.27471265.txt  mwa128_config.yaml  nocore_mwa_herasky.yaml  profiling_params.yaml  simple_equator_sim_airy.yaml  simple_equator_sim_airy_broken.yaml  single_off_zenith_healpix.hdf5  single_source.txt  single_source.vot  telescope_config_6ant_freqbuf.yaml  telescope_config_HERA.yaml  test_file.hdf5  test_layout_6ant.csv  testfile_singlesource.uvfits  testfile_singlesource.uvh5  tranquility_config.yaml  two_ant_config_airy.yaml  two_ant_config_airy_broken.yaml  two_ant_layout.csv
pyuvsim/tests/: __init__.py  conftest.py  profile_srcs.py  test_analyticbeam.py  test_antenna.py  test_baseline.py  test_mpi.py  test_mpi_uvsim.py  test_profiler.py  test_run.py  test_simsetup.py  test_source.py  test_spherical_coordinates_basis_transformation.py  test_telescope.py  test_utils.py  test_uvsim.py  test_version.py  test_z_profiler.py
reference_simulations/: README.md  compare_with_last.py  download_data_files.py  download_latest_data.py  download_ref_sims.py  get_gleam.py  jobscript.sh  list  obsparam_ref_1.1.yaml  obsparam_ref_1.2_gauss.yaml  obsparam_ref_1.2_hera.yaml  obsparam_ref_1.2_tophat.yaml  obsparam_ref_1.2_uniform.yaml  obsparam_ref_1.3_gauss.yaml  obsparam_ref_1.3_hera.yaml  obsparam_ref_1.3_tophat.yaml  obsparam_ref_1.3_uniform.yaml  obsparam_ref_1.4.yaml  ref_sim_job.sh  run_ref_sims.sh
reference_simulations/Description/: reference_simulations_1_summary.tex
reference_simulations/Memos/: pyuvsim_reference_sims_v1.md
reference_simulations/catalog_files/: R.txt  RASG.txt  letter_R_12pt_2458098.27471265.txt  letter_R_12pt_2458098.38824015.txt  mock_catalog_heratext_2458098.27471265.txt  mock_catalog_heratext_2458098.38824015.txt  two_distant_points_2458098.27471265.txt  two_distant_points_2458098.38824015.txt  two_distant_points_2458178.5.txt
reference_simulations/first_generation/: README.md  list  obsparam_ref_1.1.yaml  obsparam_ref_1.1_RASG.yaml  obsparam_ref_1.1_baseline_number.yaml  obsparam_ref_1.1_gauss.yaml  obsparam_ref_1.1_hera.yaml  obsparam_ref_1.2_gauss.yaml  obsparam_ref_1.2_hera.yaml  obsparam_ref_1.2_time_axis.yaml  obsparam_ref_1.2_uniform.yaml  obsparam_ref_1.2_zenith_1freq_airy.yaml  obsparam_ref_1.2_zenith_1freq_gauss.yaml  obsparam_ref_1.2_zenith_1freq_uniform.yaml  obsparam_ref_1.2_zenith_1freq_uvbeam.yaml  obsparam_ref_1.2_zenith_airy.yaml  obsparam_ref_1.2_zenith_gauss.yaml  obsparam_ref_1.2_zenith_uniform.yaml  obsparam_ref_1.2_zenith_uvbeam.yaml  obsparam_ref_1.3_airy.yaml  obsparam_ref_1.3_frequency_axis.yaml  obsparam_ref_1.3_gauss.yaml  obsparam_ref_1.3_hera.yaml  obsparam_ref_1.3_uniform.yaml  obsparam_ref_1.4.yaml  obsparam_ref_1.4_source_axis.yaml  obsparam_ref_1.5_uvbeam.yaml  obsparam_ref_1.6_healpix.yaml  obsparam_ref_1.7_multi_beam.yaml  obsparam_ref_1.8_lunar.yaml
reference_simulations/first_reference_simulations/: README.md  obsparam_ref_1.1.yaml  obsparam_ref_1.2_gauss.yaml  obsparam_ref_1.2_hera.yaml  obsparam_ref_1.2_zenith_uniform.yaml  obsparam_ref_1.3_gauss.yaml  obsparam_ref_1.3_hera.yaml  obsparam_ref_1.3_uniform.yaml  obsparam_ref_1.4.yaml
reference_simulations/second_generation/: README.md  obsparam_ref_2.1_airy.yaml  obsparam_ref_2.2_uvbeam.yaml  obsparam_ref_2.3_airy_flatPS.yaml  obsparam_ref_2.3_airy_gsm.yaml
scripts/: batch_profile.sh  batch_profile_job.sh  batch_profile_meshgrid_job.sh  do_batch_profiling.py  file_series_from_config.py  im_to_catalog.py  many_profile.py  plot_csv_antpos.py  profile_srcs.py  profiling_plots.py  run_param_pyuvsim.py  run_profile_pyuvsim.py  run_pyuvsim.py  summarize_profiling.py  test_cover_noinstall.sh  test_coverage.sh  uvdata_to_config.py  uvdata_to_telescope_config.py  uvfits_to_config.py  uvfits_to_telescope_config.py  uvfits_to_teleyamls.py  uvfits_to_yaml.py
tests/: __init__.py  conftest.py  test_analyticbeam.py  test_antenna.py  test_baseline.py  test_cli.py  test_mpi.py  test_profiler.py  test_run.py  test_run_ref.py  test_simsetup.py  test_telescope.py  test_utils.py  test_uvsim.py
(+196 files in other folders)
