[metadata]
description-file = README.md

[tool:pytest]
addopts = --ignore=scripts

[flake8]
ignore =
    W503  # Line break occurred before a binary operator (this changed in pep8)
    E203  # No space before colon
    D107  # Missing docstring in __init__ (we do it in the class)
    N803  # argument to function should be lowercase. We break this with N* for numbers of things
    N806  # variable in function should be lowercase. We break this with N* for numbers of things
max-line-length = 100
per-file-ignores =
    pyuvsim/tests/*.py: D
    pyuvsim/*/tests/*.py: D
    docs/*.py: D,A
    setup.py: D
# it's recommended to have max-complexity ~ 18
max-complexity = 30
rst-roles =
    class
    func
    mod
    data
    const
    meth
    attr
    exc
    obj
rst-directives =
    note
    warning
    versionadded
    versionchanged
    deprecated
    seealso
